{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 10,
  "lineage": "28f3693a-6198-1add-d7dc-2695b99d4a5c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bc06212a56393ee1",
            "arn": "arn:aws:ec2:us-west-2:719899497748:instance/i-0ebc12b3bd3bcacad",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "vault-role",
            "id": "i-0ebc12b3bd3bcacad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vault",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a415da3a1ade51b6",
            "private_dns": "ip-10-0-1-67.us-west-2.compute.internal",
            "private_ip": "10.0.1.67",
            "public_dns": "ec2-54-212-78-149.us-west-2.compute.amazonaws.com",
            "public_ip": "54.212.78.149",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-004488b5e1835ec7b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003247b201fdfbaf1",
            "tags": {
              "Name": "Advanced-example-test-instance"
            },
            "tags_all": {
              "Name": "Advanced-example-test-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0298acc8b2e5cccee"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:719899497748:internet-gateway/igw-0606a3a2f5430393d",
            "id": "igw-0606a3a2f5430393d",
            "owner_id": "719899497748",
            "tags": {
              "Name": "aws-ig-created-with-terraform"
            },
            "tags_all": {
              "Name": "aws-ig-created-with-terraform"
            },
            "vpc_id": "vpc-087aa5296564de0b6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:719899497748:route-table/rtb-0cdd7646c787e12cc",
            "id": "rtb-0cdd7646c787e12cc",
            "owner_id": "719899497748",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0606a3a2f5430393d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-087aa5296564de0b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ffcdcf964be9aed",
            "route_table_id": "rtb-0cdd7646c787e12cc",
            "subnet_id": "subnet-003247b201fdfbaf1"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.rt",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:719899497748:security-group/sg-0298acc8b2e5cccee",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0298acc8b2e5cccee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-created-with-terraform",
            "name_prefix": "",
            "owner_id": "719899497748",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-created-with-terraform"
            },
            "tags_all": {
              "Name": "SG-created-with-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-087aa5296564de0b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:719899497748:subnet/subnet-003247b201fdfbaf1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003247b201fdfbaf1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "719899497748",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPN-created-with-terraform"
            },
            "tags_all": {
              "Name": "VPN-created-with-terraform"
            },
            "vpc_id": "vpc-087aa5296564de0b6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:719899497748:vpc/vpc-087aa5296564de0b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05853faa3f69bc9ce",
            "default_route_table_id": "rtb-0fe5b0fb3c9738440",
            "default_security_group_id": "sg-0454f27a52d34161b",
            "dhcp_options_id": "dopt-889b17f0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-087aa5296564de0b6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fe5b0fb3c9738440",
            "owner_id": "719899497748",
            "tags": {
              "Name": "VPC-created-with-terraform"
            },
            "tags_all": {
              "Name": "VPC-created-with-terraform"
            }
          }
        }
      ]
    }
  ]
}